--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row mt-5">
-    <div class="col-sm-3">
+    <div class="col-sm-3 border">
       <app-left-menu></app-left-menu>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-7 border">
       <app-canvas></app-canvas>
     </div>
   </div>
