Add list of items

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row mt-5">
     <div class="col-sm-3 border">
       <app-left-menu></app-left-menu>
+      <app-elements></app-elements>
     </div>
     <div class="col-sm-7 border">
       <app-canvas></app-canvas>
